added requests to pipfile, created utils.py in core, and integrated the Spoonacular api queries

--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ django-heroku = "*"
 gunicorn = "*"
 psycopg2-binary = "*"
 django-debug-toolbar = "*"
+requests = "*"
 
 [dev-packages]
 django-debug-toolbar = "*"
