--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ gunicorn = "*"
 psycopg2-binary = "*"
 django-debug-toolbar = "*"
 requests = "*"
+bootstrap4 = "*"
 
 [dev-packages]
 django-debug-toolbar = "*"
